# chartGPT

./: .gitignore  README.md  chartGPT.db  pyproject.toml  settings.toml
.devcontainer/: devcontainer.json
chartgpt/: config.py  db.py  llm.py  main.py  prompts.py  utils.py
chartgpt/ui/: components.py  sidebar.py  table.py
